compiler/kernc_cli/tests/soundness/reject/projection/mutually_recursive_non_contractive_associated_projection_cycle.rn
// class: projection-cycle
// stderr: recursive associated type projection cycle detected
// stderr: projection repeatedly re-enters the same impl-associated type

trait A[N: usize] {
    type Out;
};

trait B[N: usize] {
    type Out;
};

struct X {};

impl[N: usize] X: A[N] {
    type Out = X.B[N].Out;
}

impl[N: usize] X: B[N] {
    type Out = X.A[N + 1].Out;
}

fn project(value: X) X.A[0].Out {
    _ = value;
    return X.{};
}

fn main() i32 {
    _ = project(X.{});
    return 0;
}
